<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a481.lostfound.LoginActivity">

    <EditText
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/sign_username"
        android:layout_marginTop="160dp"
        android:layout_marginStart="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password1"
        android:id="@+id/sign_password"
        android:layout_below="@+id/sign_username"
        android:layout_alignStart="@+id/sign_username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/signin"
        android:id="@+id/signin"
        android:layout_above="@+id/sign_password"
        android:layout_toEndOf="@+id/sign_username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_below="@+id/signin"
        android:layout_toEndOf="@+id/sign_password" />
</RelativeLayout>
