<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a481.lostfound.RegisterActivity">

    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/password1"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/password1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/password2"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/password2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="218dp" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/phonenumber"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/phonenumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="298dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:id="@+id/edit_username"
        android:layout_marginTop="48dp"
        android:layout_marginStart="70dp" />

    <EditText
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:id="@+id/edit_password1"
        android:layout_marginTop="132dp"
        android:layout_marginStart="50dp" />

    <EditText
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:id="@+id/edit_password2"
        android:layout_marginTop="210dp"
        android:layout_marginStart="92dp" />

    <EditText
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:id="@+id/edit_phonenumber"
        android:layout_marginTop="290dp"
        android:layout_marginStart="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_username"
        android:id="@+id/tip_username"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:id="@+id/tip_password1"
        android:layout_below="@+id/password2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_password1"
        android:id="@+id/tip_password2"
        android:layout_below="@+id/password1"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/ensure_register"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/phonenumber"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
